--- a/tawafeeq/src/css/styles.css
+++ b/tawafeeq/src/css/styles.css
@@ -17175,3 +17175,22 @@ html[data-show=true] .settings-button {
 .hover:hover .btn:hover {
     background-color: white;
 }
+
+.main_class {
+    padding-right: 0px !important;
+    padding-left: 0px !important;
+    background: var(--foreground);
+}
+
+.main_class2 {
+    padding-right: 0px !important;
+    padding-left: 0px !important;
+}
+
+.padding_top_0 {
+    padding-top: 0px !important;
+}
+
+.padding_bottom_0 {
+    padding-bottom: 0px !important;
+}
