--- a/css/styles.css
+++ b/css/styles.css
@@ -15129,7 +15129,7 @@ html[data-placement=vertical] .nav-container {
     background-size: cover;
     width: var(--nav-size);
     background-position: center;
-    background-image: linear-gradient(160deg, var(--gradient-1), var(--gradient-1), var(--gradient-2), var(--gradient-3));
+    background-image: linear-gradient(to right, #129DD5, #9377BD, #FA5AAB) !important;
 }
 
 html[data-placement=horizontal] .nav-container .nav-shadow,
